--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "esm": "^3.2.25",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
